Adding BASE url for github pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <base url="https://dannycallaghan.github.io/barcode/">
+        <base href="https://dannycallaghan.github.io/barcode/">
 	    <meta charset="utf-8" />
 	    <title>Bar Code</title>
     	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
